--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "main": "./out/extension.js",
   "activationEvents": [
-    "onView:discoverpanel.view"
+    "onView:discoverpanel.tooltip",
+    "onView:discoverpanel.autocomplete"
   ],
   "contributes": {
     "viewsContainers": {
@@ -27,8 +28,13 @@
       "discoverpanel-webview": [
         {
           "type": "webview",
-          "id": "discoverpanel.view",
-          "name": "Discover Panel"
+          "id": "discoverpanel.tooltip",
+          "name": "Symbol Information"
+        },
+        {
+          "type": "webview",
+          "id": "discoverpanel.autocomplete",
+          "name": "API Information"
         }
       ]
     }
@@ -43,6 +49,7 @@
     "@types/glob": "^7.1.4",
     "@types/mocha": "^9.0.0",
     "@types/node": "14.x",
+    "@types/showdown": "^1.9.4",
     "@types/vscode": "^1.61.0",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
@@ -51,6 +58,7 @@
     "eslint": "^7.32.0",
     "glob": "^7.1.7",
     "mocha": "^9.1.1",
+    "showdown": "^1.9.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
