--- a/package.json
+++ b/package.json
@@ -25,6 +25,18 @@
     "type": "git",
     "url": "https://github.com/ionide/Discover-Panel.git"
   },
+  "badges": [
+    {
+      "description": "Open Collective Backers",
+      "url": "https://img.shields.io/opencollective/backers/ionide.svg?color=blue&style=for-the-badge",
+      "href": "https://opencollective.com/ionide"
+    },
+    {
+      "description": "Open Collective Sponsors",
+      "url": "https://img.shields.io/opencollective/sponsors/ionide.svg?color=Blue&style=for-the-badge",
+      "href": "https://opencollective.com/ionide"
+    }
+  ],
   "main": "./out/extension.js",
   "activationEvents": [
     "onView:discoverpanel.tooltip",
