Add Github Actions

--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "vscode:prepublish": "npm run -S esbuild-base -- --minify",
     "esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
     "build": "npm run -S esbuild-base -- --sourcemap",
-    "watch": "npm run -S esbuild-base -- --sourcemap --watch"
+    "watch": "npm run -S esbuild-base -- --sourcemap --watch",
+    "package": "vsce package",
+    "publish": "vsce publish -p $VSCE_TOKEN"
   },
   "devDependencies": {
     "@types/glob": "^7.1.4",
@@ -87,7 +89,8 @@
     "glob": "^7.1.7",
     "mocha": "^9.1.1",
     "showdown": "^1.9.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vsce": "^1.100.2"
   },
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^0.8.3"
